# onion_tool

./: .gitignore  CMakeLists.txt  README.md  build_darwin.sh  build_linux.sh  build_windows.bat  onion.sln  test_windows.bat
.circleci/: config.yml
.github/workflows/: push.yml  test_app_self_contained.yml  test_app_with_external_static_lib.yml  test_app_with_lib.yml  test_app_with_lib_and_tests.yml  test_app_with_local_static_lib.yml  test_app_with_thirdparty_dep.yml  test_bison_file.yml  test_common_static_lib.yml  test_detached_lib.yml  test_embed_file.yml  test_module_with_static_lib.yml  test_single.yml
files/: README.md
files/cmake/: CMakeGenerator.java  CMakeSolutionSetup.java  CMakeSourcesProjectSetup.java  CXX11.cmake  ExternalAntlr4Cpp.cmake  FindFreeImage.cmake  FindUUID.cmake  FindXcursor.cmake
files/nsis/: onion.nsi
files/tools/bison/darwin_arm/: run_bison.sh
files/tools/catch2/src/: catch2.cpp
files/tools/gtest/src/: gtest-filepath.cc  gtest-port.cc  gtest.cc
files/uwp/: Package.appxmanifest
files/vs/: Shared.targets  SharedConfigurationSetup.props  SharedConfigurationSetupProspero.props  SharedConfigurationSetupUWP.props  SharedItemGroups.props
src/: aws.cpp  aws.h  codeParser.cpp  codeParser.h  common.h  configuration.cpp  configuration.h  configurationInteractive.cpp  configurationInteractive.h  configurationList.cpp  configurationList.h  externalLibrary.cpp  externalLibrary.h  externalLibraryInstaller.cpp  externalLibraryInstaller.h  externalLibraryRepository.cpp  externalLibraryRepository.h  fileGenerator.cpp  fileGenerator.h  fileRepository.cpp  fileRepository.h  git.cpp  git.h  json.cpp  json.h  libraryManifest.cpp  libraryManifest.h  main.cpp  moduleConfiguration.cpp  moduleConfiguration.h  moduleManifest.cpp  moduleManifest.h  moduleRepository.cpp  moduleRepository.h  project.cpp  project.h  projectCollection.cpp  projectCollection.h  projectManifest.cpp  projectManifest.h  (+36 more)
src/xml/: rapidxml.hpp
tests/app_self_contained/: module.onion
tests/app_self_contained/code/app/: build.xml
tests/app_with_external_static_lib/: build.xml  module.onion
tests/app_with_external_static_lib/code/app/: build.xml
tests/app_with_lib/: build.xml  module.onion
tests/app_with_lib/code/app/: build.xml
tests/app_with_lib_and_tests/: build.xml  module.onion
tests/app_with_lib_and_tests/code/app/: build.xml
tests/app_with_lib_and_tests/code/lib/: build.xml
tests/app_with_lib_and_tests/code/test/: build.xml
tests/app_with_local_static_lib/: build.xml  module.onion
tests/app_with_local_static_lib/code/app/: build.xml
tests/app_with_thirdparty_dep/: build.xml  module.onion
tests/app_with_thirdparty_dep/code/app/: build.xml
tests/bison_file/: build.xml
tests/bison_file/code/app/: build.xml
tests/common_static_lib/: build.xml  module.onion
tests/common_static_lib/code/app/: build.xml
tests/common_static_lib/code/dyn1/: build.xml
tests/detached_lib/: module.onion
tests/detached_lib/code/app/: build.xml
tests/embed_file/: module.onion
tests/module_with_static_lib/: build.xml  module.onion
(+34 files in other folders)
